fix: keep mobile track text visible during playback

--- a/src/components/Playlist/Playlist.module.scss
+++ b/src/components/Playlist/Playlist.module.scss
@@ -449,6 +449,10 @@
     display: none;
   }
 
+  .trackInfo {
+    width: 100%;
+  }
+
   .trackActions {
     right: 12px;
   }
